# JLexx

./: CMakeLists.txt  README.md  main  main.cpp  makefile
InstallDir/: install.sh
JLexx/: DFABuilderHelper.h  FileLoader.h  JLexx.h  MatchHandler.h  RegexToDFABuilder.h  a.txt
JLexx/LexLoader/: Generator.cpp  Generator.h  LexGenMain  LexGenMain.cpp  LexGenerator.h  Parser.h  TheRealJLexx.h  a.txt  jlgen  makeGen  makefile  out.txt  testA.txt
JLexx/LexLoader/GenFiles/: BridgeHeader.h  LexMain.cpp
JLexx/LexLoader/JLDebug/: BridgeHeader.h  LexMain.cpp
JLexx/LexLoader/LexRunner/: LexMain  a.out  jlrun  makeRun  makefile
JLexx/LexLoader/TestFiles/: AsciiHTML  AsciiHTMLParser.jlx  AsciiTest.in  JLexxExample.txt  LexMain  Simple.txt  SimpleAsciiPrinter.txt  html.out  test.in
JLexx/LexLoader/TestFiles/JLDebug/: BridgeHeader.h
JLexx/RestBuilder/: RestBuilder.h  RestGenHelper.h  RestGenerator.h  RestMain.cpp  RestToken.h
JLexx/RestBuilder/Rest/JS/: post.js
JLexx/RestBuilder/Rest/OBJC/: Del.m  Get.m
RegularExpression/: Utility.h
RegularExpression/DFAGenerator/: DFAGenerator.h
RegularExpression/Lexer/: Lexer.h
RegularExpression/NFAGenerator/: EZGraph.h  EpsilonNFAMatcher.h  NFAGenerator.h
RegularExpression/Parser/: Parser.h  RegularParser.h  RegularTreeNodes.h
RegularExpression/Regex/: Regex.cpp  Regex.h
RegularExpression/TestVSGrep/Test1/: grep.sh
main.dSYM/Contents/Resources/DWARF/: main
